deployment/deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: infinity-fire-systems-namespace-beta
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: infinity-fire-systems-namespace-beta
  name: infinity-fire-systems-deployment-beta
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: infinity-fire-systems-app
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: infinity-fire-systems-app
    spec:
      nodeName: ip-10-0-128-81.eu-west-2.compute.internal
      containers:
      - image: 591836277216.dkr.ecr.eu-west-2.amazonaws.com/ifp-ecr-beta:latest
        imagePullPolicy: Always
        name: infinity-fire-systems-container-beta
        ports:
        - containerPort: 8000
