deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: infinity-fire-systems-namespace-uat
  name: infinity-fire-systems-ingress-uat
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: infinity-fire-systems-service
              port:
                number: 80
